main/default/objects/Integration_Logs__c/fields/Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Id__c</fullName>
    <description>Calendar id of the user</description>
    <label>Calendar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>