main/default/objects/Integration_Logs__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date and time in which en event has occurred</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>