main/default/objects/Integration_Logs__c/fields/End_point__c.field-meta.xml
<CustomField>
    <fullName>End_point__c</fullName>
    <description>Endpoint url</description>
    <label>End point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>