main/default/objects/Integration_Logs__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who has requested</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>